[project]
name = "tax"
version = "2025.03.16"
description = ""
authors = [
    {name = "Dong-ryull Shin / Ryan",email = "1982sdr@hanmail.net"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "kivy (>=2.3.1,<3.0.0)",
    "selenium (>=4.29.0,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pyinstaller (>=6.12.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
